Update the diff file index for dark mode, and fix rendering issues.
The diff file index now displays with a darker palette on dark mode,
fitting in with the rest of the unified banner and the review request
box.

The styling is based on the Ink data table styling, with uses a black
background, helping the graphs really pop.

While working on this, I noticed that the dividing lines between the
rows were blurred slightly in light mode. This turned out to be due to
the scrolling placement (via `translateY`) and box height, which was
using sub-pixel positioning. By rounding both of these value, we align
everything to the pixel grid, keeping presentation sharp.

Icon and text alignment has also been fixed. This stood out a lot more
on dark mode.

Testing Done:
Tested in both light and dark modes, docked and undocked.

Reviewed at https://reviews.reviewboard.org/r/13798/

--- a/reviewboard/static/rb/css/pages/diffviewer.less
+++ b/reviewboard/static/rb/css/pages/diffviewer.less
@@ -1253,7 +1253,7 @@ table.rb-c-diff-file-index {
   @icon-offset: 2px;
 
   border-collapse: collapse;
-  border: @review-request-field-border;
+  border: var(--ink-c-data-table-border);
   padding: 0;
   width: 100%;
 
@@ -1264,20 +1264,21 @@ table.rb-c-diff-file-index {
   }
 
   td {
-    background: #FDFDFD;
+    background: var(--ink-c-data-table-body-bg);
     padding: 0.6em;
     margin: 0;
-    border-top: @review-request-field-table-divider-border;
+    border-top: var(--ink-c-data-table-row-border);
     vertical-align: top;
 
     &.diff-chunks-cell {
-      color: #888;
+      color: var(--ink-p-text-color-weak);
       text-align: right;
       width: 70%;
     }
 
     &.diff-file-icon {
       padding: @icon-offset 0 0 @icon-offset;
+      vertical-align: middle;
 
       .rb-icon {
         width: @icon-size;
@@ -1296,7 +1297,7 @@ table.rb-c-diff-file-index {
       width: 30%;
 
       .diff-file-rename {
-        color: #888;
+        color: var(--ink-p-text-color-weak);
         display: block;
         font-size: 90%;
         font-style: italic;
@@ -1370,7 +1371,7 @@ table.rb-c-diff-file-index {
   }
 
   &__table {
-    border: @review-request-field-border;
+    border: var(--ink-c-data-table-border);
     flex-grow: 1;
     overflow: hidden;
   }
