--- a/reviewboard/static/rb/css/ui/banners.less
+++ b/reviewboard/static/rb/css/ui/banners.less
@@ -386,8 +386,8 @@
    * The "dock" portion of the unified banner.
    */
   &__dock:not(:empty) {
-    background: @review-request-bg;
-    border-bottom: 1px @review-request-border-color solid;
+    background: var(--rb-c-review-request-bg-color);
+    border-bottom: var(--rb-c-review-request-border);
     padding: @banner-padding;
   }
 }
